@@ -20,6 +20,7 @@ The following bugs have been fixed in the 1.4.4 release.
 
 6905730	MimeMessage.parse() is very slow on malformed message content
 G 11069	update the mail.jar manifest to include DynamicImport-Package
+<no id>	add mail.mime.windowsfilenames System property to handle IE6 breakage
 
 
 		  CHANGES IN THE 1.4.3 RELEASE
